--- a/application/templates/recipes/list.html
+++ b/application/templates/recipes/list.html
@@ -10,6 +10,18 @@
     <tr>
       <td>{{ recipe.name }}</td>
       <td>{{ recipe.method }}</td>
+      <form method="POST" action="/recipes/update/">
+        <input type="hidden" value="{{ recipe.name }}" name="oldname">
+        <input type="hidden" value="{{ recipe.method }}" name="oldmethod">
+        <input type="text" value="{{ recipe.name }}" name="newname">
+        <input type="text" value="{{ recipe.method }}" name ="newmethod">
+        <input type="submit" value="Update">
+      </form>
+  
+      <form method="POST" action="/recipes/delete/">
+      <input type="hidden" value="{{ recipe.name }}" name="delname">
+      <input type="submit" value="Delete">
+    </form>
     </tr>
     {% endfor %}
   </table>
