--- a/application/templates/ingredient/new.html
+++ b/application/templates/ingredient/new.html
@@ -11,7 +11,7 @@
         {{ form.name }}
       </td>
       <td>
-    <u1>
+        <u1>
           {% for error in form.name.errors %}
           <li>{{ error }}</li>
           {% endfor %}
@@ -27,7 +27,7 @@
       </td>
       <td>
         <u1>
-          {% for error in form.method.errors %}
+          {% for error in form.recommendation.errors %}
           <li>{{ error }}</li>
           {% endfor %}
         </u1>
