toinen linkin nimi korjattu

--- a/application/templates/ingredient/list.html
+++ b/application/templates/ingredient/list.html
@@ -5,7 +5,7 @@
     <tr>
       <th>Ingredient</th>
       <th>Recommendation</th>
-      <th><a href="{{ url_for('ingredient_form') }}">Ingredients</a></th>
+      <th><a href="{{ url_for('ingredient_form') }}">Add ingredient</a></th>
     </tr>
     {% for ingredient in ingredient %}
     <tr>
