--- a/application/templates/recipes/list.html
+++ b/application/templates/recipes/list.html
@@ -1,31 +1,33 @@
 {% extends "layout.html" %}
 
 {% block body %}
-  <table>
+<h2>Recipes</h2>
+  <table class="table table-sm table-hover" style="width: 100%">
     <tr>
+      <thead class="thead-light">
       <th>Recipe</th>
       <th>Method</th>
+      <th></th>
+      <th></th>
+      </thead>
     </tr>
     {% for recipe in recipes %}
     <tr>
-      <td>{{ recipe.name }}</td>
-      <td>{{ recipe.method }}</td>
+      <td style="width: 30mm">{{ recipe.name }}</td>
+      <td style="width: 150mm">{{ recipe.method }}</td>
       <td><a href="{{ url_for('ingredient_list') }}">See ingredients</a></td>
       <td><a href="{{ url_for('ingredient_form' ) }}">Add an ingredient</a></td>
       
-      <form method="POST" action="/recipes/update/">
-        <input type="hidden" value="{{ recipe.name }}" name="oldname">
-        <input type="hidden" value="{{ recipe.method }}" name="oldmethod">
-        <input type="text" value="{{ recipe.name }}" name="newname">
-        <input type="text" value="{{ recipe.method }}" name ="newmethod">
-        <input type="submit" value="Update">
+      <td style="width: 10mm">
+      <form method="GET" action="{{ url_for('recipe_update', recipes_id = recipe.id) }}">
+        <input type="submit" class="btn btn-secondary btn-sm" value="edit" />
+        </form>
+      </td>
+      <td style="width: 10mm">
+      <form method="GET" action="{{ url_for('recipe_delete', recipes_id = recipe.id) }}">
+        <input type="submit" class="btn btn-danger btn-sm" value="delete" />
       </form>
-  
-    <form method="POST" action="/recipes/delete/">
-      <input type="hidden" value="{{ recipe.name }}" name="delname">
-      <input type="submit" value="Delete">
-    </form>
-
+      </td>
   </tr>
   {% endfor %}
 </table>
