--- a/application/templates/ingredient/list.html
+++ b/application/templates/ingredient/list.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block body %}
-<form method="POST" action="{{ url_for('list_ingredient') }}">
+<form method="POST" action="{{ url_for('ingredient_list') }}">
   <table>
     <tr>
       <th>Ingredient</th>
