--- a/application/templates/recipes/new.html
+++ b/application/templates/recipes/new.html
@@ -33,8 +33,9 @@
         </u1>
     </tr>
     <tr>
-      <td colspan="4">
-        <input type="submit" value="Add a new recipe"/>
+      <td colspan="4" style="width: 20mm">
+        <input type="submit" class="btn btn-secondary btn_sm" value="Add a new recipe"/>
+      </form>
       </td>
     </tr>
   </table>
