--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -14,13 +14,23 @@
   </td>
 
   {% for account in rec_per_user %}
-  {% for count in rec_per_user %}
   <tr>
     <td>{{ account.name }}</td>
-    <td>{{ count.recipes }}</td>
-  {% endfor %}
+    <td>{{ account.recipes }}</td>
   {% endfor %}
   </tr>
+
+  <tr>
+    <td style="width: 10em">
+      Recipes with no ingredients:
+    </td>
+  </tr>
+
+  {% for recipes in rec_no_ing %}
+<tr>
+  <td>{{ recipes.name }}</td>
+  {% endfor %}
+</tr>
 </table>
   
 {% endif %}
