--- a/application/templates/ingredient/listall.html
+++ b/application/templates/ingredient/listall.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block body %}
-<form method="POST" action="{{ url_for('ingredient_list', recipes_id=recipes_id) }}">
+<form method="POST" action="{{ url_for('ingredient_all') }}">
 <h2>Ingredients</h2>
 <table class="table table-sm table-hover" style="width: 100%">
   <tr>
