--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -20,6 +20,9 @@
                    <li class="nav-item">
                       <a class="nav-link" href="{{ url_for('recipe_form') }} ">Add a recipe</a>
                    </li>
+                   <li class="nav-item">
+                     <a class="nav-link" href="{{ url_for('ingredient_all') }}">All Ingredients</a>
+                   </li>
                     </ul>
                 <div class="form-inline mt-2 mt-md-0">
                    {% if current_user.is_authenticated %}
@@ -32,7 +35,6 @@
             </div>
        </nav>
 
-       
 
     <main role="main" class="container">
     {% block body %}
