project update March 2021

--- a/application/templates/auth/list.html
+++ b/application/templates/auth/list.html
@@ -8,6 +8,7 @@
       <thead class="thead-light">
         <th style="width: 80mm">User</th>
         <th style="width: 80mm">Username</th>
+        <th style="width: 80mm">Role Id</th>
         <th></th>
         <th></th>
         <th></th>
@@ -17,6 +18,7 @@
     <tr>
       <td>{{ user.name }}</td>
       <td>{{ user.username }}</td>
+      <td>{{ user.role_id }}</td>
 
       <td style="width: 10mm">
         <form method="GET" action="{{ url_for('user_delete', user_id=user.id) }}">
