--- a/application/templates/auth/loginform.html
+++ b/application/templates/auth/loginform.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 {{ error }}
-<form method="POST" action="{{ url_for('auth_login') }}">
+<form class="form-group" method="POST" action="{{ url_for('auth_login') }}">
   <table>
     <tr>
       <td>
