--- a/application/templates/ingredient/new.html
+++ b/application/templates/ingredient/new.html
@@ -1,7 +1,9 @@
 {% extends "layout.html" %}
 
 {% block body %}
-<form methods="POST" action="{{ url_for('ingredient_create', recipes_id = recipes_id) }}">
+<div class="container">
+  <!-- If form method is written as 'methods' the form will always use GET to submit -->
+<form method="POST" action="{{ url_for('ingredient_create', recipes_id = recipe.recipeId) }}">
   <table> 
    <tr>
       <td>
@@ -19,20 +21,6 @@
       </td>
     </tr>
     <tr>
-      <td>
-        {{ form.amount.label }}
-      </td>
-      <td>
-        {{ form.amount }}
-      </td>
-      <td>
-        <ul>
-          {% for error in form.amount.errors %}
-          <li>{{ error }}</li>
-          {% endfor %}
-        </ul>
-    </tr>
-    <tr>
       <td colspan="4" style="width: 20mm">
         <input type="submit" class="btn btn-secondary btn_sm" value="Add a new ingredient"/>
         </form>
@@ -40,5 +28,6 @@
     </tr>
   </table>
 </form>
+</div>
 {% endblock %}
 
