--- a/application/templates/ingredient/update.html
+++ b/application/templates/ingredient/update.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %} {% block body %}
-<h1>Edit Ingredient</h1>
+<h3>Edit ingredient name</h3>
 
 <form method="POST" action="{{ url_for('ingredient_update', ingredient_id=ingredient_id) }}">
   <table style="width:100%">
@@ -15,21 +15,6 @@
             {% for error in form.name.errors %}
             <li>{{ error }}</li>
             {% endfor %}
-          </ul>
-        </td>      
-    </tr>
-    <tr>
-      <td>
-        {{ form.amount.label }}
-      </td>
-      <td>
-          {{ form.amount }}
-      </td>
-      <td>
-          <ul>
-            {% for error in form.amount.errors %}
-            <li>{{ error }}</li>
-            {% endfor %}            
           </ul>
         </td>      
     </tr>
