--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -2,12 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>RecipeApplication</title>
+    <title>RecipeApp</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   </head>
-
   <body>
-      <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+      <nav class="navbar navbar-light navbar-expand-md mb-4" style="background-color: #95F985;">
           <a class="navbar-brand" href="/">RecipeApplication</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -23,25 +22,46 @@
                    <li class="nav-item">
                      <a class="nav-link" href="{{ url_for('ingredient_all') }}">All Ingredients</a>
                    </li>
+                   {% if current_user.role_id == 1 %}
+                   <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('users_all') }}">User list</a>
+                  </li>
+                   {% endif %}
                     </ul>
                 <div class="form-inline mt-2 mt-md-0">
+                <ul class="navbar-nav mr-auto">
                    {% if current_user.is_authenticated %}
-                   <a href="{{ url_for('auth_logout') }}">Hello {{ current_user.name }} -- Logout</a>
+                   <li class="nav-item">
+                      <a href="{{ url_for('auth_logout') }}">Hello {{ current_user.name }} -- Logout</a>
+                   </li>
                    {% else %}
-                   <a href="{{ url_for('auth_login') }}">Login</a>
-                   <a href="{{ url_for('auth_register') }}">Register</a>
+                   <li class="nav-item">
+                      <a class="nav-link" href="{{ url_for('auth_login') }}">Login</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="{{ url_for('auth_register') }}">Register</a>
+                    </li>
+                  </ul>
                    {% endif %}
                 </div>
             </div>
        </nav>
 
-
     <main role="main" class="container">
-    {% block body %}
+      {% with messages = get_flashed_messages() %}
+      {% if messages %}
+          <ul class=flashes>
+          {% for message in messages %}
+              <li>{{ message }}</li>
+          {% endfor %}
+          </ul>
+      {% endif %}
+      {% endwith %}
+      {% block body %}
       <p>
         Content.
       </p>
-    {% endblock %}
+      {% endblock %}
     </main>
     
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
