--- a/application/templates/recipes/new.html
+++ b/application/templates/recipes/new.html
@@ -1,20 +1,21 @@
 {% extends "layout.html" %}
 
 {% block body %}
+<div class="container">
 <form method="POST" action="{{ url_for('recipe_create') }}">
   <table>
     <tr>
-      <td>
-        {{ form.name.label }}
-      </td>
-      <td>
-        {{ form.name }}
-      </td>
-      <td>
+        <td>
+            {{ form.name.label }}
+        </td>
+        <td>
+            {{ form.name }}
+        </td>
+        <td>
         <ul>
-          {% for error in form.name.errors %}
-          <li>{{ error }}</li>
-          {% endfor %}
+            {% for error in form.name.errors %}
+            <li>{{ error }}</li>
+            {% endfor %}
         </ul>
       </td>
     </tr>
@@ -32,12 +33,20 @@
           {% endfor %}
         </ul>
     </tr>
-    <tr>
-      <td colspan="4" style="width: 20mm">
-        <input type="submit" class="btn btn-secondary btn_sm" value="Add a new recipe"/>
-      </form>
-      </td>
-    </tr>
+  </tr>
   </table>
+  <div class="row">
+    <div class="col-xs-5 col-md-5 col-sm-5">
+      <label for="multiselect" class="col-form-label">{{ form.ingredients.label }}</label>
+      {{ form.ingredients (size=10, class='form-control', multiple="multiple")}}
+      <span></span>
+    </div>
+  </div>
+  <br>
+  <td colspan="4" style="width: 20mm">
+    <input type="submit" class="btn btn-secondary btn_sm" value="Add a new recipe"/>
+  </form>
 </form>
+
+</div>
 {% endblock %}
